--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,7 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
-Suggests: covr
+Suggests: covr,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
