--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: covEst
 Title: Estimators for Covariance Matrices
 Version: 0.0.0.9000
-Authors@R: c(person("Ben", "Barnard", email = "ben_barnard@baylor.edu", role = c("aut", "cre")))
+Authors@R: c(person("Ben", "Barnard", email = "ben_barnard@baylor.edu", role = c("aut", "cre")),
+             person("Dean", "Young", role = c("aut")))
 Description: Covariance estimation functions.
 Imports:
     lazyeval
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 Suggests: covr,
     knitr,
     rmarkdown
