--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,14 @@ S3method(cov,data.frame)
 S3method(cov,grouped_df)
 S3method(cov,matrix)
 S3method(cov,resample)
+S3method(pooled_cov,data.frame)
+S3method(pooled_cov,grouped_df)
+S3method(pooled_cov,matrix)
+S3method(pooled_cov,resample)
 export(Haff_shrinkage)
 export(cov)
 export(helper)
+export(pooled_cov)
 importFrom(dplyr,as_data_frame)
 importFrom(lazyeval,lazy_dots)
 importFrom(lazyeval,lazy_eval)
