--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,14 +6,15 @@ S3method(cov,matrix)
 S3method(cov,resample)
 S3method(pooled_cov,data.frame)
 S3method(pooled_cov,grouped_df)
-S3method(pooled_cov,matrix)
-S3method(pooled_cov,resample)
 export(Haff_shrinkage)
 export(cov)
-export(helper)
+export(degreesFreedom)
 export(pooled_cov)
 importFrom(dplyr,as_data_frame)
+importFrom(lazyeval,f_eval)
+importFrom(lazyeval,f_unwrap)
 importFrom(lazyeval,lazy_dots)
 importFrom(lazyeval,lazy_eval)
+importFrom(stats,as.formula)
 importFrom(stats,cov)
 importFrom(stats,setNames)
