Added pooled_cov.resample to the NAMESPACE. Updated documentation on the pooled_cov() function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(cov,matrix)
 S3method(cov,resample)
 S3method(pooled_cov,data.frame)
 S3method(pooled_cov,grouped_df)
+S3method(pooled_cov,resample)
 export(Haff_shrinkage)
 export(cov)
 export(degreesFreedom)
