--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,5 @@ LazyData: true
 RoxygenNote: 6.0.1
 Suggests: covr,
     knitr,
-    rmarkdown,
-    testthat
+    rmarkdown
 VignetteBuilder: knitr
